# oatppcrud

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp
sql/: 001_init.sql
src/component/: AppComponent.hpp  DatabaseComponent.hpp  SwaggerComponent.hpp
src/controller/: StaticController.hpp  UserController.hpp
src/db/: UserDb.hpp
src/dto/: HelloDto.hpp  PageDto.hpp  StatusDto.hpp  UserDto.hpp
src/handler/: ErrorHandler.cpp  ErrorHandler.hpp
src/service/: UserService.cpp  UserService.hpp
vendors/: notes_for_libressl.txt
vendors/libressl_v4.0.0_windows_x64/lib/cmake/LibreSSL/: LibreSSL-Crypto-release.cmake  LibreSSL-Crypto.cmake  LibreSSL-SSL-release.cmake  LibreSSL-SSL.cmake  LibreSSL-TLS-release.cmake  LibreSSL-TLS.cmake  LibreSSLConfig.cmake
vendors/oatpp-1.3.0/: CMakeLists.txt
vendors/oatpp-libressl-1.3.0/: CMakeLists.txt
vendors/oatpp-libressl-1.3.0/cmake/: module-utils.cmake
vendors/oatpp-sqlite-1.3.0/: CMakeLists.txt
vendors/oatpp-sqlite-1.3.0/cmake/: module-utils.cmake
vendors/oatpp-swagger-1.3.0/: CMakeLists.txt
vendors/oatpp-swagger-1.3.0/cmake/: module-utils.cmake
vendors/sqlite3/: CMakeLists.txt  sqlite_amalgamation.txt
